--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -6968,7 +6968,8 @@ body{
 	top: -14px;
 	background: #440349;
 	opacity: 1 !important;
-	font-size: 30px;
+	/*font-size: 30px;*/
+	font-size: 20px;
 	font-weight: 700;
 	line-height: 20px;
 	height: 30px;
@@ -6977,7 +6978,7 @@ body{
 }
 
 
-.modaldefault .modal-body{
+.modaldefault .modal-body, #mysuccess .modal-body {
 	font-family: "BebasNeueBold";
 	text-transform: uppercase;
 	color: #fff;
@@ -7007,7 +7008,10 @@ body{
 	text-align: center;
 	margin: 10px 0px 0px 0px;
 }
-
+.close{ font-family: 'Ralewaybold'; box-shadow: 1px 1px 15px #FEF1F9; }
+.close:focus{
+	outline: none;
+}
 .modaldefault .logoshatterblock{
 	width: 300px;
 	margin: 0 auto;
@@ -7017,7 +7021,11 @@ body{
 .modaldefault .logoshatterblock img{
 	max-width: 100%;
 }
-
+.promoEvent .message_success{
+	font-size: 40px;
+	color: #ffff00;
+	font-family: "CenturyGothicBold";
+}
 
 /*---End modal css---*/
 
