--- a/src/app/music-management/music-management.component.html
+++ b/src/app/music-management/music-management.component.html
@@ -166,7 +166,7 @@
       </div>
 
       <div class="clearfix"></div>
-      <p class="headertitlepara">Upload Images (Upload at least 3 Images)</p>
+      <p class="headertitlepara">Upload mp3 (Upload at least 3 mp3 files)</p>
       <div class="form-row">
 
         <div class="form-group col-xs-12">
