--- a/src/app/musicvideos/musicvideos.component.html
+++ b/src/app/musicvideos/musicvideos.component.html
@@ -165,7 +165,7 @@
         <li> <a href="https://www.youtube.com/watch?v=VwvADgghhvs&list=LL3I...index=79" target="_blank">Barbie ft. Trina | “See About Me” | Directed by: BenMarc | Model & Product Placement (2010)</a></li>
         <li> <a href="https://www.youtube.com/watch?v=SY5bSyqbt_g" target="_blank">Marques Houston | “Ghetto Angel” | Directed by: Zeus | Model & Product Placement (2010)</a></li>
         <li> <a href="https://www.youtube.com/watch?v=-pkvpkh5jAE" target="_blank">Marques Houston | “Noize” | Directed by: Zeus | Model & Product Placement (2010)</a></li>
-        <li> <a href="https://www.youtube.com/watch?v=GGXzlRoNtHU" target="_blank">DJ Khalid | “All I Do Is Win” | Directed By; Gil Green | Model & Product Placement (2010)</a></li>
+        <li> <a href="https://www.youtube.com/watch?v=LdE3WlQ__GY&app=desktop" target="_blank">DJ Khalid | "All I Do Is Win (Remix)"  | Directed By: Gil Green | Model & Product Placement (2010)</a></li>
       </ul>
     </div>
   </div>
