--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -170,7 +170,7 @@
             boutique of experienced and productive companies that assist and improve the
             entertainment industry and impulse products.</h2>
 
-        <h2 class="btndivhomenew"><strong><a class="btnyellow" [routerLink]="['/clients-campaigns']">Shatter Proof Marketing</a> <a class="btnyellow" [routerLink]="['/model-talent-division']">Shatter Proof Models</a> <a class="btnyellow" [routerLink]="['/music-division']">Shatter Proof Music Group</a> <a class="btnyellow" [routerLink]="['/#']">Shatter Proof Media</a></strong></h2>
+        <h2 class="btndivhomenew"><strong><a class="btnyellow" [routerLink]="['/clients-campaigns']">Shatter Proof Marketing</a> <a class="btnyellow" [routerLink]="['/model-talent-division']">Shatter Proof Models</a> <a class="btnyellow" [routerLink]="['/music-division']">Shatter Proof Music Group</a> <a class="btnyellow" [routerLink]="['']" (click)="shatterProofMedia(ShatterProofMedia)">Shatter Proof Media</a></strong></h2>
 
         <!--    <p>Founded and created in 1999, Shatter Blok is a Los Angeles, California based company has done  <span>Marketing</span>,  <span>Promotions</span>,
                 <span>Model Management</span>, staffing and musical digital distribution for some of the most amazing up and coming new faces in modeling, some of the hottest clubs, radio stations, record labels, clothing, foot wear lines, and beverage companies in and around Los
@@ -375,6 +375,19 @@
     </div>
 </ng-template>
 
+<ng-template #ShatterProofMedia>
+    <div class="modal-body">
+        <div class="cross">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close" (click)="hide()">X</button>
+        </div>
+        <div class="logo_wrapper">
+            <img src="../../assets/images/shaterblockLogo.png">
+        </div>
+        <h2 class="message_success text-center">Shatter Proff Media is coming soon!</h2>
+
+
+    </div>
+</ng-template>
 <app-footer></app-footer>
 
 
